--- a/book.toml
+++ b/book.toml
@@ -1,3 +1,4 @@
+[book]
 title = "Bagua Tutorials"
 description = "Guide on how to use Bagua, a deep learning distributed training framework"
 author = "Kuaishou AI Platform & DS3 Lab <admin@mail.xrlian.com>"
