--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,13 @@ jobs:
       - name: Install `mdbook`
         run: curl -L "https://github.com/rust-lang/mdBook/releases/download/v0.4.10/mdbook-v0.4.10-x86_64-unknown-linux-gnu.tar.gz" \
           | tar xvz
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - uses: actions-rs/cargo@v1
+        with:
+          command: install
+          args: mdbook-linkcheck
       - run: ./mdbook test
       - run: ./mdbook build
 
@@ -30,5 +37,12 @@ jobs:
       - name: Install `mdbook`
         run: curl -L "https://github.com/rust-lang/mdBook/releases/download/v0.4.10/mdbook-v0.4.10-x86_64-unknown-linux-gnu.tar.gz" \
           | tar xvz
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - uses: actions-rs/cargo@v1
+        with:
+          command: install
+          args: mdbook-linkcheck
       - run: ./mdbook build
       - run: ./ci/deploy.sh
