--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,10 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: install
+          args: mdbook-katex
+      - uses: actions-rs/cargo@v1
+        with:
+          command: install
           args: mdbook-open-on-gh
       - run: ./mdbook test
       - run: ./mdbook build
@@ -48,6 +52,10 @@ jobs:
         with:
           command: install
           args: mdbook-linkcheck
+      - uses: actions-rs/cargo@v1
+        with:
+          command: install
+          args: mdbook-katex
       - uses: actions-rs/cargo@v1
         with:
           command: install
