--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,51 +14,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: ikzk/bagua-ci:latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install `mdbook`
-        run: curl -L "https://github.com/rust-lang/mdBook/releases/download/v0.4.10/mdbook-v0.4.10-x86_64-unknown-linux-gnu.tar.gz" \
-          | tar xvz
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-      - uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: mdbook-linkcheck
-      - uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: mdbook-katex
-      - uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: mdbook-open-on-gh
       - run: ./mdbook test
       - run: ./mdbook build
 
   deploy:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    container: ikzk/bagua-ci:latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install `mdbook`
-        run: curl -L "https://github.com/rust-lang/mdBook/releases/download/v0.4.10/mdbook-v0.4.10-x86_64-unknown-linux-gnu.tar.gz" \
-          | tar xvz
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-      - uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: mdbook-linkcheck
-      - uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: mdbook-katex
-      - uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: mdbook-open-on-gh
       - run: ./mdbook build
       - run: ./ci/deploy.sh
