--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
     container: ikzk/bagua-ci:latest
     steps:
       - uses: actions/checkout@v2
+      - run: rustup default stable
       - run: mdbook test
       - run: mdbook build
 
@@ -26,5 +27,6 @@ jobs:
     container: ikzk/bagua-ci:latest
     steps:
       - uses: actions/checkout@v2
+      - run: rustup default stable
       - run: mdbook build
       - run: ./ci/deploy.sh
